2005-11-30  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_extension_class_name): Use only the final
	component of the module in forming the extension class name.  
	* qm/test/database.py (Database.GetIds): Handle generic
	databases. 

	* qm/test/classes/compiler_test.py (CompilationStep): Provide
	default values.
	(CompilerBase._MakeDirectory): Do not create the temporary build
	directory if it already exists.
	(CompilerTest.Run): Create the temporary build directory.  Record
	the output from the compiler here.
	(CompilerTest._GetExecutableArguments): New function.
	(CompilerTest._MustExecutableExitSuccessfully): New function.
	(CompilerTest._RunExecutable): Use new functions.
	(CompilerTest._CheckOutput): Do not record the output here.
	Adjust use of _DiagnosticsToString.
	(CompilerTest._CheckExecutableOutput): New function.
	(CompilerTest._DiagnosticsToString): Add annotation parameter.

	* qm/test/classes/compiler.py (Compiler.ParseOutput): Do not try
	to match an error message against multiple severities.

	* qm/test/result.py (Result.CheckExitStatus): Fix typos.

	* qm/host.py (Host.UploadAndRun): Delete the file after running
	it.
	* qm/test/classes/local_host.py (LocalHost.UploadAndRun): New
	method.
	* qm/test/classes/compiler_test.py (CompilerTest._RunExecutable):
	Do not delete executables after running them.

2005-11-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py
	(DejaGNUStream.__summary_outcomes): Add KFAIL, KPASS.
	(DejaGNUStream.__outcome_descs): Likewise.
	(DejaGNUStream.__expected_outcomes): Likewise.
	(DejaGNUReader.__UpdateResult): Likewise.
	* qm/test/classes/dejagnu_test.py (DejaGNUTest.KFAIL): New
	variable.
	(DejaGNUTest.KPASS): Likewise.
	(DejaGNUTest.outcome_map): Add KFAIL, KPASS.

2005-11-16  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler_table.py: Tolerate whitespace in
	context file. 
	* qm/test/classes/dejagnu_test.py: Use CompilerTable.target as host.
